Fix build issue

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ShopGrids</title>
-    <script src='https://www.noupe.com/embed/019939dec1ed74e596a7e27b5b13ec4b3b08.js'></script>
+    <!-- <script src='https://www.noupe.com/embed/019939dec1ed74e596a7e27b5b13ec4b3b08.js'></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
